kubernetes/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: codehawk
  labels:
    name: codehawk
    app: codehawk
